--- a/Cart/Cart/CSS/Styles.css
+++ b/Cart/Cart/CSS/Styles.css
@@ -1,13 +1,14 @@
-﻿.form1 {
-    font-size: 50px;
+﻿.container-fluid {
+    background-color:khaki;
 }
 .login {
-    height: 400px;
+    height: 350px;
     width: 500px;
-    padding: 10px;
     border: 5px #CCC solid;
     border-radius: 20px;
+    border-color: khaki;
     margin: auto;
+    background-color: aliceblue;
 }
 
     .login input {
@@ -15,5 +16,18 @@
         margin: 5px;
         border-radius: 6px;
         border: 5px;
-        background-color: darkgrey;
+        background-color: #addeff;
     }
+.auto-style2 {
+    width: 100%;
+    height: 745px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 200px;
+    background-color: khaki;
+}
+#btnLogin {
+    background-color: #addeff;
+}
