--- a/Cart/Cart/CSS/Styles.css
+++ b/Cart/Cart/CSS/Styles.css
@@ -1,6 +1,7 @@
 ﻿.container-fluid {
-    background-color:khaki;
+    background-color: khaki;
 }
+
 .login {
     height: 350px;
     width: 500px;
@@ -18,16 +19,33 @@
         border: 5px;
         background-color: #addeff;
     }
+
 .auto-style2 {
     width: 100%;
     height: 745px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     padding-left: 15px;
     padding-right: 15px;
-    padding-top: 200px;
     background-color: khaki;
 }
+
 #btnLogin {
     background-color: #addeff;
 }
+
+.register {
+    height: 550px;
+    width: 700px;
+    border: 5px #CCC solid;
+    border-radius: 20px;
+    border-color: khaki;
+    background-color: aliceblue;
+}
+
+    .register input {
+        padding: 5px;
+        margin: 5px;
+        border-radius: 6px;
+        border: 5px;
+        background-color: #addeff;
+    }
