Update form Login and Register

--- a/Cart/Cart/CSS/Styles.css
+++ b/Cart/Cart/CSS/Styles.css
@@ -1,51 +1,1 @@
-﻿.container-fluid {
-    background-color: khaki;
-}
-
-.login {
-    height: 350px;
-    width: 500px;
-    border: 5px #CCC solid;
-    border-radius: 20px;
-    border-color: khaki;
-    margin: auto;
-    background-color: aliceblue;
-}
-
-    .login input {
-        padding: 5px;
-        margin: 5px;
-        border-radius: 6px;
-        border: 5px;
-        background-color: #addeff;
-    }
-
-.auto-style2 {
-    width: 100%;
-    height: 745px;
-    margin: auto;
-    padding-left: 15px;
-    padding-right: 15px;
-    background-color: khaki;
-}
-
-#btnLogin {
-    background-color: #addeff;
-}
-
-.register {
-    height: 550px;
-    width: 700px;
-    border: 5px #CCC solid;
-    border-radius: 20px;
-    border-color: khaki;
-    background-color: aliceblue;
-}
-
-    .register input {
-        padding: 5px;
-        margin: 5px;
-        border-radius: 6px;
-        border: 5px;
-        background-color: #addeff;
-    }
+﻿
