--- a/Cart/Cart/CSS/Styles.css
+++ b/Cart/Cart/CSS/Styles.css
@@ -2,3 +2,6 @@
     border: 5px;
     border-radius: 15px
 }
+.zoom:hover {
+    transform: scale(1.1); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
